deploy/mem1/app.yaml
##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: mem1
  labels:
    app: mem1
    service: mem1
spec:
  ports:
  - port: 8080 
    name: http
  selector:
    app: mem1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mem1
  labels:
    app: mem1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mem1
      version: v1
  template:
    metadata:
      labels:
        app: mem1
        version: v1
    spec:
      serviceAccountName: mem1
      containers:
      - name: mem1
        image: ghcr.io/retaildevcrews/mem1-app:beta
        resources:
          limits:
            cpu: "500m"
        args:
          - --in-memory
          - --prometheus
          - --url-prefix
          - /memory
          - --log-level
          - Warning
          - --request-log-level
          - Information
          - --zone
          - dev
          - --region
          - dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080 
        securityContext:
          runAsUser: 1000
